--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "graham-campbell/markdown": "^9.0",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
+        "laravelcollective/html": "^5.5.0",
         "unisharp/laravel-filemanager": "^1.8"
     },
     "require-dev": {
