ADM initial release.

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/css/vue-multiselect.min.css": "/css/vue-multiselect.min.css",
+    "/js/vue-multiselect.min.js": "/js/vue-multiselect.min.js"
 }
