--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.5.0",
+        "spatie/laravel-tags": "^2.1",
         "unisharp/laravel-filemanager": "^1.8"
     },
     "require-dev": {
