--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.1.3",
-    "popper.js": "^1.14.4"
+    "popper.js": "^1.14.4",
+    "vue-multiselect": "^2.1.0"
   }
 }
