--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "vue": "^2.5.7"
   },
   "dependencies": {
-    "bootstrap": "^4.1.3",
-    "popper.js": "^1.14.4",
+    "ajv": "^6.6.2",
+    "bootstrap": "4.2.*",
+    "popper.js": "1.14.6",
     "vue-multiselect": "^2.1.0"
   }
 }
